dist_man1_MANS=

if BUILD_RAIND
  dist_man1_MANS+=raind.1
endif

if ENABLE_QT
  dist_man1_MANS+=rain-qt.1
endif

if BUILD_RAIN_CLI
  dist_man1_MANS+=rain-cli.1
endif

if BUILD_RAIN_TX
  dist_man1_MANS+=rain-tx.1
endif

if ENABLE_WALLET
if BUILD_RAIN_WALLET
  dist_man1_MANS+=rain-wallet.1
endif
endif
